# NeutronGame-NodeJS-Websocket

./: .gitignore  app.js  binding.gyp  package-lock.json  package.json  readme.md  savedGameReader.js
games/: GameServer.js
games/neutron/: bindings.js  fullMove.js  gameutils.js  main.js  mainCore.js  minimax.js  userData.js
games/neutron/native/: .clang-format  CMakeLists.txt  NativeMinimax.cpp  index.cpp  main.cpp
games/neutron/native/include/: Board.h  FullMove.h  MinimaxAsyncBinding.h  MinimaxAsyncWorker.h  Move.h  gameutils.h  minimax.h
games/neutron/native/src/: Board.cpp  FullMove.cpp  MinimaxAsyncBinding.cpp  MinimaxAsyncWorker.cpp  Move.cpp  gameutils.cpp  minimax.cpp
public/: index.html
public/css/: mainWindow.css
public/js/: gameutils.js  mainWindow.js  mainWindowBundle.js  move.js  utils.js
